# cmake-demo

./: .gitignore  CMakeLists.txt  Demo  main.cc
math/: CMakeLists.txt  math.cc  math.h
